Fix: Backend compilation errors in DashboardService and optimize frontend for local development